<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    style="@style/SCREEN"
    tools:context=".MainActivity"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:backgroundTint="#FAF1F1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="0dp"
            android:background="#EAE7E7"
            android:elevation="4dp"
            >
    <RelativeLayout
        android:id="@+id/deltaRelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/news"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_news" />

        <TextView
            android:id="@+id/NewsFeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@+id/news"
            android:text="@string/news_feed"
            android:textColor="#050505"
            android:textSize="18sp"
            style="@style/TEXT"
            android:textStyle="bold" />
        <com.airbnb.lottie.LottieAnimationView
            android:layout_toRightOf="@+id/NewsFeed"
            android:id="@+id/loadingAnimation"
            android:layout_marginLeft="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_alignParentEnd="true"
            app:lottie_rawRes="@raw/news2" />

    </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolBar"
            android:background="@drawable/search_bg"
            app:queryHint="Search Here.."
            />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/TabLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/searchView"
        app:tabIndicatorColor="#F10707"
        app:tabTextColor="#191818"
        app:tabSelectedTextColor="#B90606"
        app:tabIndicatorHeight="3.5dp"
        android:backgroundTint="@color/white"
        app:tabMode="scrollable"

        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home"
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/entertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/science"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology" />
    </com.google.android.material.tabs.TabLayout>



<androidx.viewpager.widget.ViewPager
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/TabLayout">

</androidx.viewpager.widget.ViewPager>

    </RelativeLayout>

    <!--Navigation View-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:overScrollMode="never"
        app:headerLayout="@layout/layout_drawer_header"
        app:itemIconTint="#EA0D0D"
        app:itemTextColor="#141313"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>